[Test] Improving Test Coverage & CodeSmells